<resources>
    <string name="app_name">Columbus</string>


    <!--  Main Activity strings  -->
    <string name="floor_slot_picker">Floor</string>
    <string name="wall_slot_picker">Wall</string>
    <string name="robot_slot_picker">Robot</string>
    <string name="start_scan_button">Start Scan</string>
    <string name="previous_scans_button">Previous Scans</string>
    <string name="preference_ip_address_key">IP_ADDRESS</string>
    <string name="settings_title">Configure IP address</string>
    <string name="settings_positive_button">Update</string>
    <string name="settings_negative_button">Dismiss</string>
    <string name="error_invalid_ip">Not a valid IP address</string>
    <string name="toast_ip_updated">Updated IP Address for Columbus</string>
    <string name="scan_dialog_connected">Connected</string>
    <string name="scan_dialog_disconnected">No Connection</string>

    <string name="connection_error_retry">Retry</string>
    <string name="connection_error_title">Connection Error</string>

    <!--  Scan Configuration strings  -->
    <string name="scan_configuration_title">Scan Configuration</string>
    <string name="scan_name_hint">Enter scan\'s name</string>
    <string name="control_mode_instruction">Control Mode:</string>
    <string name="automatic_control_option">Automatic</string>
    <string name="manual_control_option">Manual</string>
    <string name="map_mode_instruction">Map Style:</string>
    <string name="pixel_map_option">Pixel Game</string>
    <string name="blueprint_map_option">Blueprint</string>
    <string name="scan_radius_title">Scan Radius: (in meters)</string>
    <string name="scan_error_no_name">Please choose a name for this scan</string>
    <string name="scan_error_no_map_scan_mode">Please specify both the control mode and map style for this scan</string>
    <string name="loading_scan_game_title">Loading</string>
    <string name="loading_scan_game_message">Loading your new game map.\nHold on just a moment!</string>

    <!--  Map Activity strings  -->
    <string name="end_scan_button">Finish Scan</string>
    <string name="dismiss_map_title">Cancel Scan</string>
    <string name="dismiss_map_message">Are you sure you want to dismiss this scan?\nYour map will not be saved</string>
    <string name="scan_upload_title">Uploading</string>
    <string name="loading_scan_upload_message">Your scan is being uploaded.\nThis process might take a while</string>
    <string name="upload_success_dialog_title">Scan uploaded successfully!</string>
    <string name="upload_success_dialog_message">You can view this scan in "Previous Scans"</string>
    <string name="upload_success_ok">Awesome!</string>
    <string name="finish_scan_title">Finish Scan</string>
    <string name="finish_scan_message">Are you satisfied with your scan?\nOnce uploaded, it cannot be changed</string>

    <!--    Scan List strings   -->
    <string name="previous_scans_title">Previous Scans</string>
    <string name="search_option_title">Search</string>
    <string name="empty_feed_text">No scans available</string>
    <string name="loading_stored_scan_game_title">Loading</string>
    <string name="loading_stored_scan_game_message">Loading your previous game map.\nHold on just a moment!</string>
</resources>
